# my-project-py

./: .gitignore  Mika_Rental.spec  README.md  build.bat  pack_project.py  pyproject.toml  run_main.bat
src/: admin_tool.py  app_config.py  build_utils.py  main.py  theme.py  validators.py
src/app/: about_dialog.py  base_dialog.py  custom_message_box.py  image_cropper_dialog.py  image_viewer.py  item_card.py  item_detail.py  login.py  main_window.py  payment_dialog.py  payment_history_dialog.py  profile_view.py  register.py  rental_history.py  utils.py
src/app_admin/: admin.py  console.py  income_dashboard.py  item_edit.py  login.py  user_management_dialog.py
src/app_db/: db_management.py  income_dashboard.py
src/app_payment/: camera_capture_dialog.py  ktb_api_handler.py  payment_dialog.py  payment_handler.py  payment_history_dialog.py  receipt_dialog.py  scb_api_handler.py  slip_qr_scanner_dialog.py  slip_verifier.py  slipok_api_handler.py  webhook_server.py
src/app_setting/: local_settings_dialog.py  server_settings_dialog.py
src/app_user/: my_rentals_dialog.py  profile.py
