[tool.poetry]
name = "Mika Rental"
version = "0.1.0"
description = "Mika Rental Application"
authors = ["NiRU", "MiKA"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.15"
PyQt6 = "^6.7.0"
bcrypt = "^4.1.3"
psycopg2-binary = "^2.9.9"
mysql-connector-python = "^8.4.0"
mysql = "^0.0.3"
qtawesome = "^1.4.0"
promptpay = "^1.1.9"
requests = "^2.32.5"
flask = "^3.1.2"
opencv-python-headless = "^4.12.0.88"
pyzbar = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
